# cli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  README.md
.cursor/plans/: rc_cli_开发计划_b21bc588.plan.md
.github/workflows/: ci.yml  docker.yml  integration.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: exit_code.rs  lib.rs  main.rs
crates/cli/src/commands/: alias.rs  cat.rs  completions.rs  cp.rs  head.rs  ls.rs  mb.rs  mod.rs  mv.rs  pipe.rs  rb.rs  rm.rs  stat.rs
crates/cli/src/commands/admin/: heal.rs  info.rs  mod.rs
crates/cli/src/output/: formatter.rs  mod.rs  progress.rs
crates/cli/tests/: integration.rs
crates/core/: Cargo.toml
crates/core/src/: alias.rs  config.rs  error.rs  lib.rs  path.rs  traits.rs
crates/core/src/admin/: cluster.rs  mod.rs
crates/s3/: Cargo.toml
crates/s3/src/: admin.rs  capability.rs  client.rs  lib.rs  multipart.rs
docker/: docker-compose.yml
docs/: SPEC.md  TEST_MATRIX.md
schemas/: output_v1.json  output_v2.json
