[workspace]
resolver = "2"
members = ["crates/cli", "crates/core", "crates/s3"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustfs/rc"
homepage = "https://github.com/rustfs/rc"
description = "A Rust S3 CLI client for S3-compatible object storage"
keywords = ["s3", "cli", "storage", "aws", "object-storage"]
categories = ["command-line-utilities", "filesystem"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# AWS SDK
aws-sdk-s3 = "1.119"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-credential-types = "1.2"
aws-smithy-types = "1.3"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Output formatting
indicatif = "0.17"
comfy-table = "7.2"
console = "0.15"

# Utilities
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
humansize = "2.1"
url = "2.5"
futures = "0.3"
async-trait = "0.1"
mime_guess = "2.0"

# Testing
tempfile = "3.19"
mockall = "0.13"

[profile.release]
lto = true
codegen-units = 1
strip = true

