[package]
name = "rustfs-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "rc"
path = "src/main.rs"

[dependencies]
# Workspace crates
rc-core = { workspace = true }
rc-s3 = { workspace = true }

# Async runtime
tokio.workspace = true

# CLI
clap.workspace = true
clap_complete.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Output formatting
indicatif.workspace = true
comfy-table.workspace = true
console.workspace = true

# Utilities
jiff.workspace = true
humansize.workspace = true
mime_guess.workspace = true
glob.workspace = true

[features]
default = []
# Enable integration tests that require a running S3-compatible server
integration = []
# Enable golden tests for output format verification
golden = []

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true

