[package]
name = "rc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core library for rc S3 CLI client"

[dependencies]
# Async
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utilities
dirs.workspace = true
chrono.workspace = true
url.workspace = true
humansize.workspace = true

[dev-dependencies]
tempfile.workspace = true
mockall.workspace = true

