[package]
name = "rc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for rustfs-cli S3 CLI client"
keywords = ["s3", "storage", "object-storage"]
categories = ["filesystem"]

[dependencies]
# Async
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utilities
dirs.workspace = true
jiff.workspace = true
url.workspace = true
humansize.workspace = true

[dev-dependencies]
tempfile.workspace = true
mockall.workspace = true

