[package]
name = "rc-s3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "S3 SDK adapter for rc CLI client"

[dependencies]
# Workspace crates
rc-core = { path = "../core" }

# AWS SDK
aws-sdk-s3.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-smithy-types.workspace = true

# Async
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Utilities
chrono.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
mockall.workspace = true

